RESOLVED FIXED Bug 60836
[misc] JSC/wtf/text/*.h should not be included via #include ""
https://bugs.webkit.org/show_bug.cgi?id=60836
Summary [misc] JSC/wtf/text/*.h should not be included via #include ""
Holger Freyther
Reported 2011-05-14 04:54:25 PDT
[misc] JSC/wtf/text/*.h should not be included via #include ""
Attachments
Patch (6.82 KB, patch)
2011-05-14 05:03 PDT, Holger Freyther
no flags
Holger Freyther
Comment 1 2011-05-14 05:03:06 PDT
Brent Fulgham
Comment 2 2011-05-17 11:07:18 PDT
Looks good to me. r+
WebKit Review Bot
Comment 3 2011-06-18 12:43:59 PDT
Comment on attachment 93553 [details] Patch Clearing flags on attachment: 93553 Committed r89197: <http://trac.webkit.org/changeset/89197>
WebKit Review Bot
Comment 4 2011-06-18 12:44:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.