Source/WebCore/platform/graphics/pango/FontCachePango.cpp
@@ -21,11 +21,11 @@
 #include "config.h"
 #include "FontCache.h"
 
-#include "CString.h"
 #include "Font.h"
 #include "OwnPtrCairo.h"
 #include "SimpleFontData.h"
 #include <wtf/Assertions.h>
+#include <wtf/text/CString.h>
 
 namespace WebCore {
 
