Source/WebCore/platform/graphics/wx/FontPlatformData.h
@@ -32,11 +32,11 @@
 #include "FontDescription.h"
 #include "FontWidthVariant.h"
 #include "FontOrientation.h"
-#include "StringImpl.h"
 #include <wtf/Forward.h>
 #include <wtf/RefPtr.h>
 #include <wtf/text/AtomicString.h>
 #include <wtf/text/CString.h>
+#include <wtf/text/StringImpl.h>
 
 #include <wx/defs.h>
 #include <wx/font.h>
